--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   bloc_test: ^9.0.3
   intl: ^0.17.0
   drift: ^1.5.0
-  #sqlite3_flutter_libs: ^0.5.0
+  sqlite3_flutter_libs: ^0.5.0
   path_provider: ^2.0.0
   path: ^1.8.0
   provider: ^6.0.2
